# ColBERT

./: .gitignore  .pre-commit-config.yaml  README.md  base_config.yaml  data_loader.py  main.py  pyproject.toml  trainer.py  utils.py
model/: colbert.py  modeling_colbert.py
