[tool.poetry]
name = "colbert"
version = "0.1.0"
description = "Modeling colbert"
authors = ["kimbyeolhee <qufgml0216@naver.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
ruff = "^0.0.247"
transformers = "^4.26.1"
numpy = "^1.24.2"
pre-commit = "^3.0.4"
black = "^23.1.0"
torch = "^1.13.1"
omegaconf = "^2.3.0"

[tool.black]
line-length = 119
target-version = ['py38']

[tool.ruff]
# Never enforce `E501` (line length violations).
ignore = ["E501", "E741", "W605"]
select = ["E", "F", "I", "W"]
fixable = ["E", "F", "I", "W"]
line-length = 119

# Ignore import violations in all `__init__.py` files.
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]

[tool.ruff.isort]
lines-after-imports = 2
known-first-party = ["optimum"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
